--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
-user=root
-password=*040358Eu
-url=jdbc:mysql://localhost:3306/course
+db.user=root
+db.pass=*040358Eu
+db.url=jdbc:mysql://localhost:3306/course
 useSSL=false
