--- a/.classpath
+++ b/.classpath
@@ -6,12 +6,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX-17">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MysqlConnector">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jdbc_mysql">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
